Use new packaging mechanism for internal queries

--- a/queries/codeql-pack.yml
+++ b/queries/codeql-pack.yml
@@ -1,4 +1,4 @@
 name: codeql-action-custom-queries-javascript
 version: 0.0.0
-libraryPathDependencies: codeql-javascript
-
+dependencies:
+  codeql/javascript-all: 0.6.1
