--- a/.github/workflows/__resolve-environment-action.yml
+++ b/.github/workflows/__resolve-environment-action.yml
@@ -26,11 +26,11 @@ jobs:
       matrix:
         include:
         - os: ubuntu-latest
-          version: latest
+          version: nightly-latest
         - os: macos-latest
-          version: latest
+          version: nightly-latest
         - os: windows-latest
-          version: latest
+          version: nightly-latest
     name: resolve-environment-action
     permissions:
       contents: read
