--- a/pr-checks/checks/resolve-environment-action.yml
+++ b/pr-checks/checks/resolve-environment-action.yml
@@ -12,6 +12,6 @@ steps:
     with:
       language: go
 
-  - name: "Check that some Go configuration was returned"
+  - name: "Fail if no Go configuration was returned"
     if: (!fromJSON(steps.resolve-environment.outputs.environment).configuration.go)
     run: exit 1
