--- a/.github/actions/setup-swift/action.yml
+++ b/.github/actions/setup-swift/action.yml
@@ -24,10 +24,15 @@ runs:
           VERSION="null"
         else
           VERSION="$("$SWIFT_EXTRACTOR_DIR/tools/$PLATFORM/extractor" --version | awk '/version/ { print $3 }')"
-          # Specify 5.7.0, otherwise setup Action will default to latest minor version. 
+          # Specify 5.x.0, otherwise setup Action will default to latest minor version. 
           if [ $VERSION = "5.7" ]; then
             VERSION="5.7.0"
-          fi
+          elif [ $VERSION = "5.8" ]; then
+            VERSION="5.8.0"
+          # setup-swift does not yet support v5.8.1 Remove this when it does.
+          elif [ $VERSION = "5.8.1" ]; then
+            VERSION="5.8.0"
+          fi 
         fi
         echo "version=$VERSION" | tee -a $GITHUB_OUTPUT
 
