Group together npm dependency updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,16 +6,23 @@ updates:
       interval: weekly
     labels:
       - Update dependencies
-    ignore:
-      - dependency-name: "*"
-        update-types:
-          - version-update:semver-minor
-          - version-update:semver-patch
+    groups:
+      npm:
+        patterns:
+          - "*"
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
       interval: weekly
+    groups:
+      actions:
+        patterns:
+          - "*"
   - package-ecosystem: github-actions
     directory: "/.github/actions/setup-swift/" # All subdirectories outside of "/.github/workflows" must be explicitly included.
     schedule:
       interval: weekly
+    groups:
+      actions-setup-swift:
+        patterns:
+          - "*"
