--- a/pr-checks/checks/test-local-codeql.yml
+++ b/pr-checks/checks/test-local-codeql.yml
@@ -12,7 +12,7 @@ steps:
   - id: init
     uses: ./../action/init
     with:
-      tools: ./codeql-bundle.tar.gz
+      tools: ./codeql-bundle-linux64.tar.gz
   - uses: ./../action/.github/actions/setup-swift
     with:
       codeql-path: ${{ steps.init.outputs.codeql-path }}
