--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@schemastore/package": "0.0.10",
     "@types/uuid": "^9.0.2",
     "adm-zip": "^0.5.10",
+    "check-disk-space": "^3.4.0",
     "console-log-level": "^1.4.1",
     "del": "^6.1.1",
     "fast-deep-equal": "^3.1.3",
