--- a/.github/actions/prepare-test/action.yml
+++ b/.github/actions/prepare-test/action.yml
@@ -4,6 +4,10 @@ inputs:
   version:
     description: "The version of the CodeQL CLI to use. Can be 'latest', 'default', 'nightly-latest', 'nightly-YYYY-MM-DD', or 'stable-YYYY-MM-DD'."
     required: true
+  require-codeql-bundle-all:
+    description: "If true, we output a tools URL with codeql-bundle-all.tar.gz file rather than platform-specific URL"
+    default: 'false'
+    required: false
 outputs:
   tools-url:
     description: "The value that should be passed as the 'tools' input of the 'init' step."
@@ -24,7 +28,9 @@ runs:
       run: |
         set -e # Fail this Action if `gh release list` fails.
 
-        if [[ "$RUNNER_OS" == "Linux" ]]; then
+        if [[ ${{ inputs.require-codeql-bundle-all }} == "true" ]]; then
+          artifact_name="codeql-bundle.tar.gz"
+        elif [[ "$RUNNER_OS" == "Linux" ]]; then
           artifact_name="codeql-bundle-linux64.tar.gz"
         elif [[ "$RUNNER_OS" == "macOS" ]]; then
           artifact_name="codeql-bundle-osx64.tar.gz"
