--- a/.github/workflows/__go-tracing-autobuilder.yml
+++ b/.github/workflows/__go-tracing-autobuilder.yml
@@ -26,10 +26,6 @@ jobs:
       matrix:
         include:
         - os: ubuntu-latest
-          version: stable-20220615
-        - os: macos-latest
-          version: stable-20220615
-        - os: ubuntu-latest
           version: stable-20220908
         - os: macos-latest
           version: stable-20220908
@@ -41,6 +37,14 @@ jobs:
           version: stable-20230418
         - os: macos-latest
           version: stable-20230418
+        - os: ubuntu-latest
+          version: stable-v2.13.5
+        - os: macos-latest
+          version: stable-v2.13.5
+        - os: ubuntu-latest
+          version: stable-v2.14.6
+        - os: macos-latest
+          version: stable-v2.14.6
         - os: ubuntu-latest
           version: default
         - os: macos-latest
