--- a/.github/workflows/__ml-powered-queries.yml
+++ b/.github/workflows/__ml-powered-queries.yml
@@ -26,12 +26,6 @@ jobs:
       matrix:
         include:
         - os: ubuntu-latest
-          version: stable-20220615
-        - os: macos-latest
-          version: stable-20220615
-        - os: windows-latest
-          version: stable-20220615
-        - os: ubuntu-latest
           version: stable-20220908
         - os: macos-latest
           version: stable-20220908
@@ -49,6 +43,18 @@ jobs:
           version: stable-20230418
         - os: windows-latest
           version: stable-20230418
+        - os: ubuntu-latest
+          version: stable-v2.13.5
+        - os: macos-latest
+          version: stable-v2.13.5
+        - os: windows-latest
+          version: stable-v2.13.5
+        - os: ubuntu-latest
+          version: stable-v2.14.6
+        - os: macos-latest
+          version: stable-v2.14.6
+        - os: windows-latest
+          version: stable-v2.14.6
         - os: ubuntu-latest
           version: default
         - os: macos-latest
