--- a/.github/workflows/__scaling-reserved-ram.yml
+++ b/.github/workflows/__scaling-reserved-ram.yml
@@ -26,21 +26,25 @@ jobs:
       matrix:
         include:
         - os: ubuntu-latest
-          version: stable-20220615
-        - os: macos-latest
-          version: stable-20220615
-        - os: ubuntu-latest
           version: stable-20220908
         - os: macos-latest
           version: stable-20220908
         - os: ubuntu-latest
           version: stable-20221211
         - os: macos-latest
-          version: stable-20221211
+          version: 1211
         - os: ubuntu-latest
           version: stable-20230418
         - os: macos-latest
           version: stable-20230418
+        - os: ubuntu-latest
+          version: stable-v2.13.5
+        - os: macos-latest
+          version: stable-v2.13.5
+        - os: ubuntu-latest
+          version: stable-v2.14.6
+        - os: macos-latest
+          version: stable-v2.14.6
         - os: ubuntu-latest
           version: default
         - os: macos-latest
