--- a/.github/workflows/__unset-environment.yml
+++ b/.github/workflows/__unset-environment.yml
@@ -26,13 +26,15 @@ jobs:
       matrix:
         include:
         - os: ubuntu-latest
-          version: stable-20220615
-        - os: ubuntu-latest
           version: stable-20220908
         - os: ubuntu-latest
           version: stable-20221211
         - os: ubuntu-latest
           version: stable-20230418
+        - os: ubuntu-latest
+          version: stable-v2.13.5
+        - os: ubuntu-latest
+          version: stable-v2.14.6
         - os: ubuntu-latest
           version: default
         - os: ubuntu-latest
