--- a/pr-checks/checks/go-indirect-tracing-workaround-diagnostic.yml
+++ b/pr-checks/checks/go-indirect-tracing-workaround-diagnostic.yml
@@ -1,5 +1,5 @@
-name: "Go: workaround for indirect tracing"
-description: "Checks that our workaround for indirect tracing for Go 1.21+ on Linux works"
+name: "Go: diagnostic when Go is changed after init step"
+description: "Checks that we emit a diagnostic if Go is changed after the init step"
 # only Linux is affected
 operatingSystems: ["ubuntu"]
 # pinned to a version which does not support statically linked binaries for indirect tracing
