Add a feature flag to turn this off for newer versions of codeql

--- a/.github/workflows/python312-windows.yml
+++ b/.github/workflows/python312-windows.yml
@@ -30,7 +30,7 @@ jobs:
         version: default
 
     - name: Initialize CodeQL
-      uses: ./../init
+      uses: ./../action/init
       with:
         tools: latest
         languages: python
