--- a/.github/workflows/__unset-environment.yml
+++ b/.github/workflows/__unset-environment.yml
@@ -55,6 +55,7 @@ jobs:
       with:
         version: ${{ matrix.version }}
         use-all-platform-bundle: 'false'
+        setup-kotlin: true
     - name: Set environment variable for Swift enablement
       if: >-
         runner.os != 'Windows' && (
