--- a/.github/workflows/__all-platform-bundle.yml
+++ b/.github/workflows/__all-platform-bundle.yml
@@ -41,6 +41,7 @@ jobs:
       with:
         version: ${{ matrix.version }}
         use-all-platform-bundle: 'true'
+        setup-kotlin: true
     - name: Set environment variable for Swift enablement
       if: >-
         runner.os != 'Windows' && (
