--- a/.github/workflows/__swift-custom-build.yml
+++ b/.github/workflows/__swift-custom-build.yml
@@ -51,6 +51,7 @@ jobs:
       with:
         version: ${{ matrix.version }}
         use-all-platform-bundle: 'false'
+        setup-kotlin: true
     - name: Set environment variable for Swift enablement
       if: >-
         runner.os != 'Windows' && (
