C++: fix autobuild pr-checks to latest codeql-cli version

--- a/pr-checks/checks/cpp-deptrace-enabled.yml
+++ b/pr-checks/checks/cpp-deptrace-enabled.yml
@@ -1,6 +1,7 @@
 name: "Cpp: enabling autoinstalling dependencies"
 description: "Checks that running C/C++ autobuild with autoinstalling dependencies works"
 operatingSystems: ["ubuntu", "macos"]
+versions: ["latest"]
 env:
   DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
 steps:
