--- a/pr-checks/checks/cpp-deptrace-enabled-on-macos.yml
+++ b/pr-checks/checks/cpp-deptrace-enabled-on-macos.yml
@@ -1,6 +1,6 @@
-name: "Cpp: enabling autoinstalling dependencies"
-description: "Checks that running C/C++ autobuild with autoinstalling dependencies works"
-operatingSystems: ["ubuntu"]
+name: "Cpp: disabling autoinstalling dependencies"
+description: "Checks that running C/C++ autobuild with autoinstalling dependencies explicitly disabled works"
+operatingSystems: ["macos"]
 versions: ["latest"]
 env:
   DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
@@ -21,6 +21,8 @@ steps:
   - shell: bash
     run: |
       if ! ls /usr/bin/errno; then
-        echo "Did not autoinstall errno"
+        echo "As expected, CODEQL_EXTRACTOR_CPP_AUTOINSTALL_DEPENDENCIES is a no-op on macOS"
+      else
+        echo "CODEQL_EXTRACTOR_CPP_AUTOINSTALL_DEPENDENCIES should not have had any effect on macOS"
         exit 1
       fi
