C++: tweak deptrace checks

--- a/.github/workflows/__cpp-deptrace-enabled.yml
+++ b/.github/workflows/__cpp-deptrace-enabled.yml
@@ -27,6 +27,10 @@ jobs:
         include:
         - os: ubuntu-latest
           version: latest
+        - os: ubuntu-latest
+          version: default
+        - os: ubuntu-latest
+          version: nightly-latest
     name: 'Cpp: enabling autoinstalling dependencies'
     permissions:
       contents: read
