--- a/.github/workflows/__cpp-deptrace-enabled-on-macos.yml
+++ b/.github/workflows/__cpp-deptrace-enabled-on-macos.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         include:
         - os: macos-latest
-          version: latest
+          version: nightly-latest
     name: 'Cpp: disabling autoinstalling dependencies'
     permissions:
       contents: read
