--- a/pr-checks/checks/cpp-deptrace-disabled.yml
+++ b/pr-checks/checks/cpp-deptrace-disabled.yml
@@ -1,7 +1,7 @@
 name: "Cpp: disabling autoinstalling dependencies"
 description: "Checks that running C/C++ autobuild with autoinstalling dependencies explicitly disabled works"
 operatingSystems: ["ubuntu"]
-versions: ["latest"]
+versions: ["latest", "default", "nightly-latest"] # This feature is not compatible with old CLIs
 env:
   DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
 steps:
