--- a/pr-checks/checks/cpp-deptrace-enabled-on-macos.yml
+++ b/pr-checks/checks/cpp-deptrace-enabled-on-macos.yml
@@ -1,7 +1,7 @@
 name: "Cpp: disabling autoinstalling dependencies"
 description: "Checks that running C/C++ autobuild with autoinstalling dependencies explicitly disabled works"
 operatingSystems: ["macos"]
-versions: ["latest"]
+versions: ["nightly-latest"]  # This is not released yet, will come with 2.15.2
 env:
   DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
 steps:
