--- a/pr-checks/checks/cpp-deptrace-enabled.yml
+++ b/pr-checks/checks/cpp-deptrace-enabled.yml
@@ -1,7 +1,7 @@
 name: "Cpp: enabling autoinstalling dependencies"
 description: "Checks that running C/C++ autobuild with autoinstalling dependencies works"
 operatingSystems: ["ubuntu"]
-versions: ["latest"]
+versions: ["latest", "default", "nightly-latest"] # This feature is not compatible with old CLIs
 env:
   DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
 steps:
