--- a/.github/workflows/__cpp-deptrace-disabled.yml
+++ b/.github/workflows/__cpp-deptrace-disabled.yml
@@ -3,7 +3,7 @@
 #     (cd pr-checks; pip install ruamel.yaml@0.17.31 && python3 sync.py)
 # to regenerate this file.
 
-name: 'PR Check - Cpp: disabling autoinstalling dependencies'
+name: 'PR Check - C/C++: disabling autoinstalling dependencies (Linux)'
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   GO111MODULE: auto
@@ -31,7 +31,7 @@ jobs:
           version: default
         - os: ubuntu-latest
           version: nightly-latest
-    name: 'Cpp: disabling autoinstalling dependencies'
+    name: 'C/C++: disabling autoinstalling dependencies (Linux)'
     permissions:
       contents: read
       security-events: write
@@ -70,7 +70,7 @@ jobs:
     - shell: bash
       run: |
         if ls /usr/bin/errno; then
-          echo "Did autoinstall errno, and it should not have"
+          echo "C/C++ autobuild installed errno, but it should not have since auto-install dependencies is disabled."
           exit 1
         fi
     env:
