--- a/.github/workflows/debug-artifacts.yml
+++ b/.github/workflows/debug-artifacts.yml
@@ -25,7 +25,6 @@ jobs:
         - ubuntu-latest
         - macos-latest
         version:
-        - stable-20220908
         - stable-20221211
         - stable-20230418
         - stable-v2.13.5
@@ -53,7 +52,6 @@ jobs:
         uses: actions/setup-python@v4
         if: |
           matrix.os == 'macos-latest' && (
-          matrix.version == 'stable-20220908' ||
           matrix.version == 'stable-20221211' ||
           matrix.version == 'stable-20230418' ||
           matrix.version == 'stable-v2.13.5' ||
@@ -86,7 +84,7 @@ jobs:
       - name: Check expected artifacts exist
         shell: bash
         run: |
-          VERSIONS="stable-20220908 stable-20221211 stable-20230418 stable-v2.13.5 stable-v2.14.6 default latest nightly-latest"
+          VERSIONS="stable-20221211 stable-20230418 stable-v2.13.5 stable-v2.14.6 default latest nightly-latest"
           LANGUAGES="cpp csharp go java javascript python"
           for version in $VERSIONS; do
             for os in ubuntu-latest macos-latest; do
