--- a/.github/workflows/__go-custom-queries.yml
+++ b/.github/workflows/__go-custom-queries.yml
@@ -26,12 +26,6 @@ jobs:
       matrix:
         include:
         - os: ubuntu-latest
-          version: stable-20220908
-        - os: macos-latest
-          version: stable-20220908
-        - os: windows-latest
-          version: stable-20220908
-        - os: ubuntu-latest
           version: stable-20221211
         - os: macos-latest
           version: stable-20221211
@@ -85,8 +79,6 @@ jobs:
       if: >-
         matrix.os == 'macos-latest' && (
 
-        matrix.version == 'stable-20220908' ||
-
         matrix.version == 'stable-20221211' ||
 
         matrix.version == 'stable-20230418' ||
@@ -105,11 +97,7 @@ jobs:
         version: ${{ matrix.version }}
         use-all-platform-bundle: 'false'
     - name: Set environment variable for Swift enablement
-      if: >-
-        runner.os != 'Windows' && (
-            matrix.version == '20220908' ||
-            matrix.version == '20221211'
-        )
+      if: runner.os != 'Windows' && matrix.version == '20221211'
       shell: bash
       run: echo "CODEQL_ENABLE_EXPERIMENTAL_FEATURES_SWIFT=true" >> $GITHUB_ENV
     - uses: ./../action/init
